--- a/webpage.html
+++ b/webpage.html
@@ -5,7 +5,17 @@
         <title>New Webpage</title>
     </head>
     <body>
+        <style media="screen">
+            .MainPageHead{
+              font-family:monospace;
+              font-weight: bold;
+              color: rgb(50,90,200);
+            }
+        </style>
+        <h1 class="MainPageHead">Computer Hardware Project</h1>
+        <h2 class="MainPageHead">by Koby and Mike</h2>
+        <h3 class="MainPageHead">Network Adapters</h3>
+        <p>test</p>
 
-
-    </body> 
-</html> 
+    </body>
+</html>
