--- a/webpage.html
+++ b/webpage.html
@@ -3,19 +3,41 @@
     <head>
         <meta charset="utf-8">
         <title>New Webpage</title>
+        
     </head>
     <body>
         <style media="screen">
             .MainPageHead{
-              font-family:monospace;
+              font-family: monospace;
               font-weight: bold;
               color: rgb(50,90,200);
             }
+            p{
+              font-family: monospace;
+            }
+            h5{
+              font-family: monospace;
+            }
         </style>
+        
+        <!-- HEADING -->
         <h1 class="MainPageHead">Computer Hardware Project</h1>
         <h2 class="MainPageHead">by Koby and Mike</h2>
         <h3 class="MainPageHead">Network Adapters</h3>
-        <p>test</p>
+
+         <!--DIVISIONS -->
+        <div id="Div1" name="Div1" title="Div Element" style="color: blue; border: 1px solid black;">
+          <h5>Section 1</h5>
+          <p>Paragrah1</p>
+          <p>Paragraph2</p>
+       </div>
+       <br />
+       <div id="Div2" name="Div2" title="Div Element" style="color: blue; border: 1px solid black;">
+         <h5>Section 2</h5>
+         <p>paragraph1</p>
+         <p>Paragrah2</p>
+  </div>
+</div>
 
     </body>
 </html>
