--- a/webpage.html
+++ b/webpage.html
@@ -2,10 +2,16 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>New Webpage</title>
-        
+        <title>Network Adapters by Koby and Mike</title>
+
+        <!-- HEADING -->
+        <h1 class="MainPageHead">Computer Hardware Project</h1>
+        <h2 class="MainPageHead">by Koby and Mike</h2>
+        <h3 class="MainPageHead">Network Adapters</h3>
+
     </head>
     <body>
+        <!--STYLE-->
         <style media="screen">
             .MainPageHead{
               font-family: monospace;
@@ -15,26 +21,21 @@
             p{
               font-family: monospace;
             }
-            h5{
+            h4{
               font-family: monospace;
             }
         </style>
-        
-        <!-- HEADING -->
-        <h1 class="MainPageHead">Computer Hardware Project</h1>
-        <h2 class="MainPageHead">by Koby and Mike</h2>
-        <h3 class="MainPageHead">Network Adapters</h3>
 
          <!--DIVISIONS -->
         <div id="Div1" name="Div1" title="Div Element" style="color: blue; border: 1px solid black;">
-          <h5>Section 1</h5>
+          <h4>Section 1</h4>
           <p>Paragrah1</p>
           <p>Paragraph2</p>
        </div>
        <br />
        <div id="Div2" name="Div2" title="Div Element" style="color: blue; border: 1px solid black;">
-         <h5>Section 2</h5>
-         <p>paragraph1</p>
+         <h4>Section 2</h4>
+         <p>Paragraph1</p>
          <p>Paragrah2</p>
   </div>
 </div>
