--- a/webpage.html
+++ b/webpage.html
@@ -2,42 +2,58 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>New Webpage</title>
-        
-    </head>
-    <body>
+        <!--STYLE HEAD -->
         <style media="screen">
-            .MainPageHead{
-              font-family: monospace;
-              font-weight: bold;
-              color: rgb(50,90,200);
-            }
-            p{
-              font-family: monospace;
-            }
-            h5{
-              font-family: monospace;
-            }
+          .MainPageHead{
+            font-family: monospace;
+            font-weight: bold;
+            color: rgb(50,90,200);
+          }
+          #ImgHead{
+            float
+          }
         </style>
-        
+
+        <title>Network Adapters by Koby and Mike</title>
+
         <!-- HEADING -->
         <h1 class="MainPageHead">Computer Hardware Project</h1>
         <h2 class="MainPageHead">by Koby and Mike</h2>
         <h3 class="MainPageHead">Network Adapters</h3>
+        <img  id="ImgHead" src="https://www.google.ca/imgres?imgurl=https%3A%2F%2Ffthmb.tqn.com%2FnPFIMig_DxcHy7lssFXfFuy_2vQ%3D%2F768x0%2Ffilters%3Ano_upscale()%2FD-Link_DFE-528TX-56a1ada73df78cf7726cfcc6.JPG&imgrefurl=https%3A%2F%2Fwww.lifewire.com%2Fintroduction-to-computer-network-adapters-817580&docid=D35abCBFaKwc-M&tbnid=jCWD9XY_2piidM%3A&vet=10ahUKEwi9r8PLqLfZAhWr7oMKHeiyBXwQMwiKAigAMAA..i&w=768&h=512&safe=strict&bih=918&biw=1280&q=network%20adapter&ved=0ahUKEwi9r8PLqLfZAhWr7oMKHeiyBXwQMwiKAigAMAA&iact=mrc&uact=8" alt="Network Adapter">
 
+    </head>
+    <body>
+        <!--STYLE BODY-->
+        <style media="screen">
+            p{
+              font-family: monospace;
+            }
+            h4{
+              font-family: monospace;
+              color: blue;
+            }
+            div{
+              border: 1px solid black;
+            }
+        </style>
          <!--DIVISIONS -->
-        <div id="Div1" name="Div1" title="Div Element" style="color: blue; border: 1px solid black;">
-          <h5>Section 1</h5>
+        <div id="Div1" name="Div1">
+          <h4>Section 1</h4>
           <p>Paragrah1</p>
           <p>Paragraph2</p>
        </div>
        <br />
-       <div id="Div2" name="Div2" title="Div Element" style="color: blue; border: 1px solid black;">
-         <h5>Section 2</h5>
-         <p>paragraph1</p>
+       <div id="Div2" name="Div2">
+         <h4>Section 2</h4>
+         <p>Paragraph1</p>
          <p>Paragrah2</p>
-  </div>
-</div>
-
+       </div>
+     </br>
+       <div id="Div3" name="Div3">
+         <h4>Section 3</h4>
+         <p>Paragraph 1</p>
+         <p>Paragraph 2</p>
+       </div>
     </body>
 </html>
