--- a/webpage.html
+++ b/webpage.html
@@ -2,12 +2,16 @@
 <!-- Computer Hardware Project Webpage by Koby Wood -->
 <!-- Hardware Reasearch by Mike Zhigun (sources listed) -->
 
+<!-- Project wiki: https://github.com/Ma1hT3ach3r/AYJ-ICS3U-Spring-2018/wiki/Computer-Hardware -->
+
 <html>
   <head>
 	    <meta charset= "utf-8">
 	    <title>Network Adapters by Koby and Mike</title>
 
       <!--Style of structure -->
+
+      <!-- Positioning Columns and Containers -->
   	  <style>
 
     		body {
@@ -30,7 +34,7 @@
     		}
 
     		#left {
-    			width: 180px;
+    			width: 170px;
     			padding: 0 10px;
     			right: 240px;
     			margin-left: -100%;
@@ -43,19 +47,22 @@
     		#container .column {
     			padding-bottom: 1001em;
     			margin-bottom: -1000em;
-    		}
-
+        }
     		/* Style of text and such */
     		body {
     			margin: 0;
     			padding: 0;
-    			font-family:monospace;
+    			font-family: sans-serif;
     			line-height: 1.5em;
     		}
 
     		p {
-    			/*Nothing needed */
+    			/* color: rgb(0,0,0) */
     		}
+
+        h1{
+          color: rgb(58, 162, 232);
+        }
 
     		nav ul {
     			list-style-type: none;
@@ -99,25 +106,57 @@
   		<main id="center" class="column">
   			<article>
 
-  				<h1>Heading</h1>
-  				<p>test</p>
+  				<h1>What is the history of this computer part?</h1>
+  				<p>A number of experimental and early commercial LAN technologies were developed in the 1970s to solve the problem of slow interconnections between computer systems. The wireless network adapter was first introduced in places where a lan cable was difficult or impossible to install and use. The first wireless LAN (local area network) came together in 1971 when networking technologies met radio communications at the University of Hawaii as a research project called ALOHNET.</p>
 
+          <h1>Why was this computer part developed?</h1>
+          <p>In the 1960’s computers were starting to gain popularity in universities and research labs. The need for connections between computer systems was increasing. Developing a network adapter solves this problem.</p>
+
+          <h1>What does this computer part connect to?</h1>
+          <p>A network adapter can connect to the PCI / PCI Express port on your motherboard. They can also connect through a usb port. In order for the network adapter to work you need wifi provided by your ISP (internet service provider). Wifi uses radio waves and the network adapter receives the wifi radio waves which lets you use the internet. </p>
+
+          <h1>What is this computer part?</h1>
+          <p>A network adapter is a component of a computer that is used for communicating over a network with another computer. It lets a computer to connect with another computer, server or any networking device over an LAN (local area network) connection. A network adapter can be used over a wired or wireless network.</p>
+
+          <h1>What are the costs for the part (budget version, high end version, etc.) ?</h1>
+          <p>1.25$ 100 - 125Mbps is the cheapest adapter on (according to ebay) and the most expensive adapter is 2000-2500$ for 12 Gbps. Although, the average person only needs around 50 mbps.</p>
+
+          <h1>What is the purpose of this part?</h1>
+          <p>To connect your computer to a network to connect with servers, or other computers. The network adapter receives radio waves (wifi) from your ISP (internet service provider) and lets you connect to the internet.</p>
+
+          <h1>Who was the inventor of this part?</h1>
+          <p>Norman Abramson was believed to invent the first wireless computer communication network in 1971.</p>
+
+          <h1>What is the average cost of the part?</h1>
+          <p>There cannot be an average cost of network adapters because their range of capability to process different bandwidths can vary. For example, some adapters can process 30 mbps while others can process up to 2 gbps.</p>
+
+          <h1>Images:</h1>
+          <p>As you can see here, network adapters can connect to your motherboard or connect through usb.</p>
+          <img class="imgs" src="https://fthmb.tqn.com/nPFIMig_DxcHy7lssFXfFuy_2vQ=/768x0/filters:no_upscale()/D-Link_DFE-528TX-56a1ada73df78cf7726cfcc6.JPG" alt="Network adapter that connects to PCI express on motherboard" width="260" height="200">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSxJ1xskOu2S3W_mNaSXGkBIKnyQ-TtaUlh_qalCx3k4AmodTUaLw" alt="Network adapter that connects to PCI v2">
+          <img src="http://2.bp.blogspot.com/-2Jd3UCCP5qo/UWMg2wgNywI/AAAAAAAAACA/1iyHMw0VYdo/s1600/TP-LINK+TL-WN822N.jpg" alt="USB network adapter" width="200" height="250">
+          <img src="https://i.ebayimg.com/images/g/qBYAAOSwBLlVM~xN/s-l300.jpg" alt="USB network adapter v2">
   			</article>
   		</main>
 
       <!-- Left Column Text -->
   		<nav id="left" class="column">
   			<h3>Sources:</h3>
-  			<ul>
-  				<li><a href="link">Link 1</a></li>
-  				<li><a href="link">Link 2</a></li>
-  				<li><a href="link">Link 3</a></li>
-  				<li><a href="link">Link 4</a></li>
-  				<li><a href="link">Link 5</a></li>
-  			</ul>
+  			<ol>
+  				<li><a href="https://study.com/academy/lesson/network-interface-card-nic-types-function-definition.html">Study.com</a></li>
+  				<li><a href="https://en.wikipedia.org/wiki/Wireless_LAN">Wikipedia</a></li>
+  				<li><a href="https://www.techopedia.com/definition/8546/network-adapter">Techopedia</a></li>
+  				<li><a href="https://www.google.com/search?tbm=isch&source=hp&biw=1600&bih=769&ei=v2yTWvjtC4rcswWPm6DQCA&q=Network+Adapters&oq=Network+Adapters&gs_l=img.3..0l10.1715.8337.0.8432.27.18.4.4.7.0.161.1530.0j13.13.0....0...1ac.1.64.img..7.20.1540.0..35i39k1j0i10i24k1.0.3jy8snhFR8s">Google Images</a></li>
+  			</ol>
         <h3>Github Repository:</h3>
         <ul>
-          <li><a href ="https://github.com/kwood3/Computer-Hardware-Project">Click here</a></li>
+          
+          <!-- Opens in new tab when clicked -->
+          <li><a href ="https://github.com/kwood3/Computer-Hardware-Project" target="blank">Click here</a></li>
+        </ul>
+        <h3>Project wiki:</h3>
+        <ul>
+          <li><a href="https://github.com/kwood3/Computer-Hardware-Project/blob/testingBranch/webpage.html" target="blank">Click here</a></li>
         </ul>
   		</nav>
   	</div>
