--- a/webpage.html
+++ b/webpage.html
@@ -150,13 +150,13 @@
   			</ol>
         <h3>Github Repository:</h3>
         <ul>
-          
+
           <!-- Opens in new tab when clicked -->
           <li><a href ="https://github.com/kwood3/Computer-Hardware-Project" target="blank">Click here</a></li>
         </ul>
         <h3>Project wiki:</h3>
         <ul>
-          <li><a href="https://github.com/kwood3/Computer-Hardware-Project/blob/testingBranch/webpage.html" target="blank">Click here</a></li>
+          <li><a href="https://github.com/Ma1hT3ach3r/AYJ-ICS3U-Spring-2018/wiki/Computer-Hardware" target="blank">Click here</a></li>
         </ul>
   		</nav>
   	</div>
