--- a/webpage.html
+++ b/webpage.html
@@ -74,6 +74,11 @@
     			text-decoration: none;
     		}
 
+        .h4LEFT {
+            color: rgb(74, 75, 79);
+
+        }
+
     		#header {
     			font-size: large;
     			padding: 0.3em;
@@ -97,7 +102,12 @@
 
   <body>
     <!-- Header -->
-  	<header id="header"><p>Network Adapters by Koby and Mike</p></header>
+  	<header id="header">
+      <p>Network Adapters by Koby and Mike</p>
+
+      <!-- Website Couter API -->
+      <a href="http://www.reliablecounter.com" target="_blank"><img src="http://www.reliablecounter.com/count.php?page=kwood3.github.io&digit=style/plain/20/&reloads=1" alt="www.reliablecounter.com" title="www.reliablecounter.com" border="0"></a><br /><a href="http://www.reliablecounter.com/es/" target="_blank" style="font-family: Geneva, Arial; font-size: 14px; color: #330010; text-decoration: none;">Unique Website Visits</a>
+    </header>
 
     <!-- Main text (body) -->
   	<div id="container">
@@ -141,6 +151,7 @@
       <!-- Left Column Text -->
   		<nav id="left" class="column">
   			<h3>Sources:</h3>
+        <h4 class="h4LEFT">Network Adapters:</h4>
   			<ol>
   				<li><a href="https://study.com/academy/lesson/network-interface-card-nic-types-function-definition.html">Study.com</a></li>
   				<li><a href="https://en.wikipedia.org/wiki/Wireless_LAN">Wikipedia</a></li>
